Fixed horizontal scroll at bottom site

--- a/src/components/Gantt/Gantt.less
+++ b/src/components/Gantt/Gantt.less
@@ -6,22 +6,24 @@
   }
 
   &__inner {
+    height: 100vh;
+    width: 100vw;
     overflow-x: scroll;
-    overflow-y: visible;
+    overflow-y: scroll;
     border-right: 1px solid @light-gray;
 
-    &::-webkit-scrollbar {
-      width: 0.4em;
-    }
+    // &::-webkit-scrollbar {
+    //   width: 0.4em;
+    // }
    
-    &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
-    }
+    // &::-webkit-scrollbar-track {
+    //   box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    // }
    
-    &::-webkit-scrollbar-thumb {
-      background-color: rgba(0,0,0,.1);
-      outline: 1px solid slategrey;
-    }
+    // &::-webkit-scrollbar-thumb {
+    //   background-color: rgba(0,0,0,.1);
+    //   outline: 1px solid slategrey;
+    // }
 
     * {
       user-select: none;
