--- a/src/components/Gantt/Row/Row.less
+++ b/src/components/Gantt/Row/Row.less
@@ -1,27 +1,6 @@
 @import '../../../less/colors.less';
 
 .gantt-row {
-  &__task-name {
-    position: absolute;
-    display: flex;
-    width: 208px;
-    padding: 5px 10px 4px;
-    border: 1px solid @light-gray;
-    border-top: none;
-    background: @white;
-    z-index: 100;
-
-    &:hover .gantt-row__edit-button {
-      opacity: 1 !important;
-    }
-  }
-
-  &__task-title {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
   &__task-timeline {
     position: relative;
     padding: 3px 0;
@@ -42,51 +21,8 @@
     background: @blue;
   }
 
-  &:nth-child(2) {
+  &:nth-child(3) {
     margin-top: 90px;
-  }
-
-  & &__edit-button {
-    width: 15px;
-    height: 15px;
-    margin-right: 50px;
-    opacity: 0;
-    cursor: pointer;
-  }
-
-  &__edit-modal {
-    position: absolute;
-    left: 240px;
-    top: 50%;
-    transform: translate(0, -50%);
-    outline: none;
-    border: 1px solid @light-gray;
-    box-shadow: 0 2px 10px @transparent-black;
-    background: @white;
-
-    &-wrapper [aria-hidden='true'] {
-      background: none !important;
-    }
-
-    &-title {
-      margin-top: 0;
-      text-align: center;
-    }
-
-    &-form {
-      display: flex;
-      flex-direction: column;
-      padding: 10px;
-    }
-
-    & &-field {
-      margin-bottom: 10px;
-    }
-
-    & &-submit {
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
   }
 
   &__weekend {
