--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,19 +1,6 @@
 body {
   margin: 0;
-  overflow-x: hidden;
-
-  &::-webkit-scrollbar {
-    width: 1em;
-  }
- 
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
-  }
- 
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0,.1);
-    outline: 1px solid slategrey;
-  }
+  overflow: hidden;
 }
 
 .root {
